--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,254 +1,1 @@
-/* ========================================
- ========= start color variables ========
-========================================= */
-/*============== end colors ===============*/
-/* ========================================
- ========= start pads and margins  ========
-========================================= */
-/* line 4, C:\inetpub\wwwroot\localhost - HTML\assets\css\util.less */
-.x-removeM {
-  margin: 0px !important;
-}
-/* line 8, C:\inetpub\wwwroot\localhost - HTML\assets\css\util.less */
-.x-removeMT {
-  margin-top: 0px !important;
-}
-/* line 12, C:\inetpub\wwwroot\localhost - HTML\assets\css\util.less */
-.x-removeMB {
-  margin-bottom: 0px !important;
-}
-/* line 16, C:\inetpub\wwwroot\localhost - HTML\assets\css\util.less */
-.x-removeML {
-  margin-left: 0px !important;
-}
-/* line 20, C:\inetpub\wwwroot\localhost - HTML\assets\css\util.less */
-.x-removeMR {
-  margin-right: 0px !important;
-}
-/* line 24, C:\inetpub\wwwroot\localhost - HTML\assets\css\util.less */
-.x-removeP {
-  padding: 0px !important;
-}
-/* line 28, C:\inetpub\wwwroot\localhost - HTML\assets\css\util.less */
-.x-removePT {
-  padding-top: 0px !important;
-}
-/* line 32, C:\inetpub\wwwroot\localhost - HTML\assets\css\util.less */
-.x-removePB {
-  padding-bottom: 0px !important;
-}
-/* line 36, C:\inetpub\wwwroot\localhost - HTML\assets\css\util.less */
-.x-removePL {
-  padding-left: 0px !important;
-}
-/* line 40, C:\inetpub\wwwroot\localhost - HTML\assets\css\util.less */
-.x-removePR {
-  padding-right: 0px !important;
-}
-/* line 44, C:\inetpub\wwwroot\localhost - HTML\assets\css\util.less */
-.x-inlineblock {
-  display: inline-block;
-}
-/* line 48, C:\inetpub\wwwroot\localhost - HTML\assets\css\util.less */
-.x-block {
-  display: block;
-}
-/* ================ end pads and margins ===================== */
-/* line 55, C:\inetpub\wwwroot\localhost - HTML\assets\css\util.less */
-.x-offcanvas {
-  text-indent: -999px;
-  margin: 0;
-}
-/* line 60, C:\inetpub\wwwroot\localhost - HTML\assets\css\util.less */
-.x-list-unstyled {
-  padding-left: 0;
-  list-style: none;
-  margin-top: 0;
-  margin-bottom: 10px;
-}
-/* ======= MISC ================= */
-/* line 70, C:\inetpub\wwwroot\localhost - HTML\assets\css\util.less */
-.x-dashline {
-  min-width: 10px;
-  height: 4px;
-  border-bottom: 1px dashed #ddd;
-}
-/* ====================== Mixins =====================*/
-/* line 2, C:\inetpub\wwwroot\localhost - HTML\assets\css\mixins.less */
-.strokeWhite {
-  color: #566C7E;
-  text-shadow: -1px -1px 0 #ffffff, 1px -1px 0 #ffffff, -1px 1px 0 fff, 1px 1px 0 #ffffff;
-}
-/*=========== end mixins ============================*/
-/* line 1, C:\inetpub\wwwroot\localhost - HTML\assets\css\header.less */
-.header {
-  background: #ffffff;
-  color: #ffffff;
-  padding-bottom: 6px;
-}
-/* line 7, C:\inetpub\wwwroot\localhost - HTML\assets\css\header.less */
-.x-logo h1 {
-  margin-top: 0;
-  text-indent: -9999px;
-}
-/* line 13, C:\inetpub\wwwroot\localhost - HTML\assets\css\header.less */
-.x-logofont {
-  font-family: Oswald, Lato, Abril Fatface;
-  font-weight: 700;
-  font-size: 40px;
-  color: #ffffff;
-  text-transform: uppercase;
-}
-/* line 22, C:\inetpub\wwwroot\localhost - HTML\assets\css\header.less */
-.x-logo {
-  background-image: url('../images/Logo2012.png');
-  background-size: 240px 70px;
-  background-repeat: no-repeat;
-  width: 240px;
-  height: 70px;
-  margin-left: 12px;
-  display: block;
-}
-/* line 1, C:\inetpub\wwwroot\localhost - HTML\assets\css\searchbar.less */
-.x-search-bar {
-  padding: 10px 0px;
-  margin-top: 0px;
-  background: #f1f1f1;
-  border-top: 1px solid #f0f0f0;
-  border-bottom: 1px solid #f0f0f0;
-  color: #fff;
-}
-/* line 10, C:\inetpub\wwwroot\localhost - HTML\assets\css\searchbar.less */
-.x-gradient {
-  background-color: #eeeeee;
-  /* Safari 4-5, Chrome 1-9 */
-  background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#ffffff), to(#2f2727));
-  /* Safari 5.1, Chrome 10+ */
-  background: -webkit-linear-gradient(top, #ffffff, #f8f8f8);
-  /* Firefox 3.6+ */
-  background: -moz-linear-gradient(top, #ffffff, #f8f8f8);
-  /* IE 10 */
-  background: -ms-linear-gradient(top, #ffffff, #f8f8f8);
-  /* Opera 11.10+ */
-  background: -o-linear-gradient(top, #ffffff, #f8f8f8);
-}
-/* line 15, C:\inetpub\wwwroot\localhost - HTML\assets\css\searchbar.less */
-.x-result-bar {
-  background: #fff;
-  padding-top: 10px;
-  padding-bottom: 4px;
-}
-/* line 20, C:\inetpub\wwwroot\localhost - HTML\assets\css\searchbar.less */
-.x-result-bar .x-jobtitle {
-  margin: 0;
-  display: inline;
-  font-size: 14px;
-  font-weight: bold;
-  padding: 0 4px;
-}
-/* line 1, C:\inetpub\wwwroot\localhost - HTML\assets\css\global.less */
-body {
-  font-family: 'Lato', sans-serif;
-  font-size: 14px;
-  color: #333;
-}
-/* line 7, C:\inetpub\wwwroot\localhost - HTML\assets\css\global.less */
-a {
-  color: #337ab7;
-  text-decoration: none;
-}
-/* line 13, C:\inetpub\wwwroot\localhost - HTML\assets\css\global.less */
-.btn-primary {
-  color: #fff;
-}
-/* line 18, C:\inetpub\wwwroot\localhost - HTML\assets\css\global.less */
-.fa {
-  color: #36567d;
-}
-/* ========================================
- ========= start jobs page styles  ========
-========================================= */
-/* line 11, C:\inetpub\wwwroot\localhost - HTML\assets\css\jobs.less */
-#x-filters li {
-  padding: 4px 0;
-}
-/* line 16, C:\inetpub\wwwroot\localhost - HTML\assets\css\jobs.less */
-.x-clear-filters {
-  width: 100%;
-}
-/* line 20, C:\inetpub\wwwroot\localhost - HTML\assets\css\jobs.less */
-.x-content {
-  background: #fff;
-}
-/* ================ end job page styles ===================== */
-@media (max-width: 479px) {
-  /* line 29, C:\inetpub\wwwroot\localhost - HTML\assets\css\jobs.less */
-  .x-what,
-  .x-where {
-    margin-bottom: 5px;
-  }
-  /* .x-logo
-    {
-        text-align: center;
-        background-image: url('../images/Logo200-11.png');
-        background-repeat: no-repeat;
-        width: 240px;
-        min-width: 240px;
-        height: 70px;
-        display: block;
-    }*/
-}
-@media (min-width: 480px) and (max-width: 991px) {
-  /* line 46, C:\inetpub\wwwroot\localhost - HTML\assets\css\jobs.less */
-  .x-reducepad-5 {
-    padding-right: 5px !important;
-    padding-left: 5px !important;
-  }
-}
-/*@media (min-width: 1360px){
-    .container {
-        width: 1340px;
-    }
-}*/
-/* line 1, C:\inetpub\wwwroot\localhost - HTML\assets\css\jobwell.less */
-#job-well {
-  padding-top: 15px;
-}
-/* line 4, C:\inetpub\wwwroot\localhost - HTML\assets\css\jobwell.less */
-#job-well .x-well {
-  padding: 6px 0 6px 0;
-  background: #FFF;
-}
-/* line 8, C:\inetpub\wwwroot\localhost - HTML\assets\css\jobwell.less */
-#job-well .x-well p {
-  padding: 0px 0;
-  margin-bottom: 0 !important;
-  line-height: 18px;
-}
-/* line 14, C:\inetpub\wwwroot\localhost - HTML\assets\css\jobwell.less */
-#job-well .x-well .x-serptitle a {
-  font-size: 16px;
-  color: #36567d;
-}
-/* line 21, C:\inetpub\wwwroot\localhost - HTML\assets\css\jobwell.less */
-#job-well .x-well-even {
-  background: #FFF;
-}
-/* ========= start footer styles ======== */
-/* line 3, C:\inetpub\wwwroot\localhost - HTML\assets\css\footer.less */
-footer {
-  background: #252525;
-  color: #333333;
-  border-top: 1px solid #f0f0f0;
-  border-bottom: 1px solid #f0f0f0;
-}
-/* line 10, C:\inetpub\wwwroot\localhost - HTML\assets\css\footer.less */
-.x-footer {
-  padding: 10px 0;
-}
-/* line 13, C:\inetpub\wwwroot\localhost - HTML\assets\css\footer.less */
-.x-subfooter {
-  padding: 10px 0 5px 0;
-}
-/* ================ end footer styles ===================== */
-/*# sourceMappingURL=app.css.map */
+.x-removeM{margin:0 !important}.x-removeMT{margin-top:0 !important}.x-removeMB{margin-bottom:0 !important}.x-removeML{margin-left:0 !important}.x-removeMR{margin-right:0 !important}.x-removeP{padding:0 !important}.x-removePT{padding-top:0 !important}.x-removePB{padding-bottom:0 !important}.x-removePL{padding-left:0 !important}.x-removePR{padding-right:0 !important}.x-inlineblock{display:inline-block}.x-block{display:block}.x-offcanvas{text-indent:-999px;margin:0}.x-list-unstyled{padding-left:0;list-style:none;margin-top:0;margin-bottom:10px}.x-dashline{min-width:10px;height:4px;border-bottom:1px dashed #ddd}.strokeWhite{color:#566c7e;text-shadow:-1px -1px 0 #fff,1px -1px 0 #fff,-1px 1px 0 fff,1px 1px 0 #fff}.header{background:#fff;color:#fff;padding-bottom:6px}.x-logo h1{margin-top:0}.x-logofont{font-family:Oswald,Lato,Abril Fatface;font-weight:700;font-size:40px;color:#fff;text-transform:uppercase}.x-logo{background-image:url("http:/thejobfool.com/themes/default/images/Logo2012.png");background-size:240px 70px;background-repeat:no-repeat;width:240px;height:70px;margin-left:12px;display:block}#x-home .header h1{height:90px;font-size:12px}.x-homelogo{width:100%;max-width:300px;min-width:150px;display:block}.x-homelogo img{width:100%}.x-homelogo a{display:block-inline;min-height:50px}@media only screen and (min-width:320px){#x-home .header h1{height:60px}}@media only screen and (min-width:480px){#x-home .header h1{height:70px}}.x-searchbar{padding:5px 0;margin-top:0;background:#f1f1f1;border-top:1px solid #f0f0f0;border-bottom:1px solid #f0f0f0;color:#fff}.x-searchbar .fa-map-marker{padding:2px}.x-gradient{background-color:#eee;background:-webkit-gradient(linear, 0 0, 0 100%, from(#fff), to(#2f2727));background:-webkit-linear-gradient(top, #fff, #f8f8f8);background:-moz-linear-gradient(top, #fff, #f8f8f8);background:-ms-linear-gradient(top, #fff, #f8f8f8);background:-o-linear-gradient(top, #fff, #f8f8f8)}.x-result-bar{background:#fff;padding-top:10px;padding-bottom:4px}.x-result-bar .x-jobtitle{margin:0;display:inline;font-size:14px;font-weight:bold;padding:0 4px}body{font-family:'Lato',sans-serif;font-size:14px;color:#333}a{color:#337ab7;text-decoration:none}.btn-primary{color:#fff}.fa{color:#36567d}.x-content{background:#fff}#x_filters .form-control{width:75%}#x_filters h5{font-weight:bold;font-size:16px}#x_filters li{padding:4px 0}@media (max-width:479px){.x-searchbar .x-reducepad-5{margin-bottom:5px}}@media (min-width:480px) and (max-width:991px){.x-searchbar{padding-left:10px;padding-right:10px}.x-searchbar .x-reducepad-5{padding-right:5px !important;padding-left:5px !important;margin-bottom:5px}}#job-well{padding-top:15px}#job-well .x-well{padding:6px 0 6px 0;background:#fff}#job-well .x-well p{padding:0 0;margin-bottom:0 !important;line-height:18px}#job-well .x-well .x-serptitle a{font-size:16px;color:#36567d}#job-well .x-well-even{background:#fff}footer{background:#252525;color:#333;border-top:1px solid #f0f0f0;border-bottom:1px solid #f0f0f0}.x-footer{padding:10px 0}.x-subfooter{padding:10px 0 5px 0}
