--- a/assets/css/searchbar.less
+++ b/assets/css/searchbar.less
@@ -1,12 +1,17 @@
-.x-search-bar
+.x-searchbar
 {
-    padding: 10px 0px;
+    padding: 5px 0px;
     margin-top: 0px;
     background: @searchbarBackground;
     border-top: 1px solid @searchbarBorder;
     border-bottom: 1px solid @searchbarBorder;
     color: #fff;
 }
+
+.x-searchbar .fa-map-marker {
+    padding: 2px;
+}
+
 .x-gradient {
     
     .linerGradient(#fff, #F8F8F8, #eee);
