--- a/assets/css/header.less
+++ b/assets/css/header.less
@@ -6,7 +6,7 @@
 
 .x-logo h1 {
     margin-top: 0;
-    text-indent: -9999px;
+    //text-indent: -9999px;
 }
 
 
@@ -21,7 +21,7 @@
 
 .x-logo
 {
-    background-image: url('../images/Logo2012.png');
+    background-image: url("http:/thejobfool.com/themes/default/images/Logo2012.png");
     background-size: 240px 70px;
     background-repeat: no-repeat;
     width: 240px;
@@ -29,3 +29,57 @@
     margin-left:12px;
     display:block;
 }
+
+
+#x-home .header h1 {
+    height: 90px;
+    font-size: 12px;
+}
+
+.x-homelogo{
+    width:100%;
+    max-width: 300px;
+    min-width:150px;
+    display:block;
+    
+    img { width:100%; }
+    
+    a  { display:block-inline; min-height:50px;}
+    
+}
+
+
+
+
+
+    /* Custom, iPhone Retina */ 
+    @media only screen and (min-width : 320px) {
+        #x-home .header h1 {
+            height: 60px;
+        }
+    } //
+
+    /* Extra Small Devices, Phones */ 
+    @media only screen and (min-width : 480px) {
+        #x-home .header h1 {
+            height: 70px;
+        }
+    } //
+
+    /* Small Devices, Tablets */
+    @media only screen and (min-width : 768px) {
+
+    } //
+
+    /* Medium Devices, Desktops */
+    @media only screen and (min-width : 992px) {
+
+    } //
+
+    /* Large Devices, Wide Screens */
+    @media only screen and (min-width : 1200px) {
+
+    } //
+
+
+
