--- a/bootstrap/css/offcanvas.css
+++ b/bootstrap/css/offcanvas.css
@@ -1,22 +1,15 @@
 /*
- * Style tweaks
- * --------------------------------------------------
- */
-html,
-body {
-  overflow-x: hidden;  Prevent scroll on narrow devices 
-}
-body {
-  /*padding-top: 70px;*/
-}
-footer {
-  /*padding: 30px 0;*/
-}
-
-/*
  * Off Canvas
  * --------------------------------------------------
  */
+
+html,
+body {
+  overflow-x: hidden; /* Prevent scroll on narrow devices */
+}
+
+
+
 @media screen and (max-width: 767px) {
   .row-offcanvas {
     position: relative;
