added assets for unify theme

--- a/assets/css/app.less
+++ b/assets/css/app.less
@@ -1,10 +1,22 @@
+@import "u-app.less";
+@import "u-blocks.less";
+@import "u-style.less";
+@import "u-header-v6.less";
+@import "u-footer-v6.less";
 @import "colors.less";
 @import "type.less";
 @import "util.less";
 @import "mixins.less";
+@import "home.less";
 @import "header.less";
-@import "searchbar.less";
+//@import "searchbar.less";
+@import "comp-homehero.less";
+@import "comp-browsehome.less";
+@import "comp-alert-subscribe.less";
+@import "comp-werehiring.less";
+
 @import "global.less";
 @import "jobs.less";
 @import "jobwell.less";
-@import "footer.less";
+
+@import "comp-footer.less";
