--- a/assets/css/colors.less
+++ b/assets/css/colors.less
@@ -1,8 +1,8 @@
 /* ========================================
  ========= start color variables ========
 ========================================= */
-@headerBackground: #fff;
-@headerColor: #FFF;
+@headerBackground: #000;
+@headerColor: #fff;
 
 @searchbarBackground: #F1F1F1;
 @searchbarBorder: #F0F0F0 ;
@@ -14,7 +14,7 @@
 
 
 @jfBlue: #36567D;
-@jfRed: #C12028;
-
+//@jfRed: #C12028;
+@jfRed: #E74C3C;
 
 /*============== end colors ===============*/
