--- a/assets/css/searchbar.less
+++ b/assets/css/searchbar.less
@@ -1,20 +1,21 @@
-.x-searchbar
-{
-    padding: 5px 0px;
+@searchbarBackground: #F1F1F1;
+.x-searchbar {
+    //padding: 5px 0px;
     margin-top: 0px;
     background: @searchbarBackground;
-    border-top: 1px solid @searchbarBorder;
-    border-bottom: 1px solid @searchbarBorder;
+   // border-top: 1px solid @searchbarBorder;
+   // border-bottom: 1px solid @searchbarBorder;
     color: #fff;
 }
 
-.x-searchbar .fa-map-marker {
+
+.fa-map-marker {
     padding: 2px;
 }
 
 .x-gradient {
     
-    .linerGradient(#fff, #F8F8F8, #eee);
+   // .linerGradient(#fff, #F8F8F8, #eee);
 }
 
 .x-result-bar
@@ -25,9 +26,14 @@
     .x-jobtitle {
         margin:0;
         display:inline;
-        font-size: @font-standard;
+       // font-size: @font-standard;
         font-weight: bold;
         padding: 0 4px;
     }
     
+}
+
+.btn-primary {
+    background: @jfBlue;
+    border: 1px solid #ddd;
 }
