--- a/assets/css/util.less
+++ b/assets/css/util.less
@@ -52,6 +52,21 @@
 /* ================ end pads and margins ===================== */
 
 
+
+/* ========== typography ================== */
+
+.x-textleft {
+    text-align: left !important;
+}
+.x-textright {
+    text-align: justify !important;
+}
+
+.x-textjustify {
+    text-align: justify !important;
+}
+
+
 .x-offcanvas
 {
     text-indent: -999px;
@@ -74,3 +89,10 @@
 } 
 
 
+.bw {
+    -webkit-filter: grayscale(1) !important;
+    -moz-filter: grayscale(100%) !important;
+    -ms-filter: grayscale(100%) !important;
+    filter: grayscale(100%) !important;
+
+}
