--- a/assets/css/header.less
+++ b/assets/css/header.less
@@ -2,18 +2,39 @@
     background: @headerBackground;
     color: @headerColor;
     padding-bottom: 6px;
+    margin-bottom:10px;
 }
 
-.x-logo h1 {
-    margin-top: 0;
-    //text-indent: -9999px;
+
+.x-text-logo {
+        width: 228px;
+        padding:6px;
+        border: 1px solid #FFF;
 }
 
+.x-text-logo h1 {
+        margin: 0;
+        //font-family: Lato;
+        font-family: 'Lato', sans-serif;
+        letter-spacing: 0.0em;
+        font-size: 47px;
+        color: #FFF;
+}
+
+.x-text-logo .x-job {
+    font-weight: 700;
+    color: #FFF;
+}
+
+.x-text-logo .x-fool {
+    font-weight: 400;
+    color: #FFF;
+}
 
 .x-logofont {
-    font-family:Oswald, Lato, Abril Fatface;
+    font-family:Roboto, Oswald, Lato, Abril Fatface;
     font-weight: 700;
-    font-size:40px;
+    font-size:44px;
     color: @headerColor;
     text-transform: uppercase;
 }
@@ -31,10 +52,7 @@
 }
 
 
-#x-home .header h1 {
-    height: 90px;
-    font-size: 12px;
-}
+
 
 .x-homelogo{
     width:100%;
@@ -44,10 +62,21 @@
     
     img { width:100%; }
     
-    a  { display:block-inline; min-height:50px;}
+    a  { 
+        display:block-inline; 
+        min-height:50px;
+        text-decoration: none;
+    }
     
 }
 
+    .header-v6 .menu-icons-list {
+        margin: 20% 10px;
+    }
+
+    .x-siderbar-toggle {
+        border-radius: 5px;
+    }
 
 
 
@@ -68,12 +97,26 @@
 
     /* Small Devices, Tablets */
     @media only screen and (min-width : 768px) {
+        
+    .header-v6 .navbar-nav > li > a    {
+        padding: 10px 20px;
+        line-height: 54px;
+    }
 
     } //
 
     /* Medium Devices, Desktops */
     @media only screen and (min-width : 992px) {
+        .header-fixed .header-v6.header-dark-transparent.header-fixed-shrink .navbar-nav .active > a, 
+        .header-fixed .header-v6.header-dark-transparent.header-fixed-shrink .navbar-nav li > a:hover {
+        color: #FFF;
+        }
+        .header-v6 .navbar-nav > li > a    {
+        padding: 10px 20px !important;
+        line-height: 54px !important;
+        }
 
+        
     } //
 
     /* Large Devices, Wide Screens */
