--- a/assets/css/jobs.less
+++ b/assets/css/jobs.less
@@ -2,6 +2,11 @@
  ========= start jobs page styles  ========
 ========================================= */
 
+.header {
+    background: #000;
+    color: #fff;
+}
+
 #content-section {
     //background: url('../images/bg/bg_pattern1.png') repeat fixed;
 }
@@ -32,14 +37,12 @@
 
 
 
-
-
 /* ================ end job page styles ===================== */
 
 
 
 @media (max-width: 479px){
-    .x-searchbar .x-reducepad-5  {
+    .x-reducepad-5  {
         margin-bottom: 5px;
     }
     
@@ -56,13 +59,22 @@
     }*/
 }
 
+
+@media (min-width: 360px) and (max-width: 479px){
+    .x-jobtitle {
+        font-size:16px;
+    }
+}
+
+
+
+
 @media (min-width: 480px) and (max-width: 991px){
     .x-searchbar {
-        padding-left:10px;
-        padding-right:10px;
+
     }
     
-    .x-searchbar  .x-reducepad-5
+    .x-reducepad-5
     {
         padding-right: 5px !important;
         padding-left: 5px !important;
