--- a/assets/css/app.less
+++ b/assets/css/app.less
@@ -7,16 +7,16 @@
 @import "type.less";
 @import "util.less";
 @import "mixins.less";
+@import "global.less";
 @import "home.less";
 @import "header.less";
 //@import "searchbar.less";
+@import "comp-buttons.less";
+@import "comp-searchbar-jobs"
 @import "comp-homehero.less";
 @import "comp-browsehome.less";
 @import "comp-alert-subscribe.less";
 @import "comp-werehiring.less";
-
-@import "global.less";
 @import "jobs.less";
 @import "jobwell.less";
-
 @import "comp-footer.less";
