--- a/assets/css/header.less
+++ b/assets/css/header.less
@@ -1,7 +1,6 @@
 .header {
     background: @headerBackground;
     color: @headerColor;
-    padding-bottom: 6px;
     margin-bottom:10px;
 }
 
@@ -71,7 +70,8 @@
 }
 
     .header-v6 .menu-icons-list {
-        margin: 20% 10px;
+        margin: 31% 10px;
+        padding-left: 10px;
     }
 
     .x-siderbar-toggle {
