--- a/assets/css/searchbar.less
+++ b/assets/css/searchbar.less
@@ -1,11 +1,14 @@
 @searchbarBackground: #F1F1F1;
-.x-searchbar {
+.x-searchbar-jobs {
     //padding: 5px 0px;
     margin-top: 0px;
     background: @searchbarBackground;
    // border-top: 1px solid @searchbarBorder;
    // border-bottom: 1px solid @searchbarBorder;
     color: #fff;
+    background: url("../img/patterns/breadcrumbs.png");
+    background-repeat: repeat;
+    
 }
 
 
