--- a/assets/css/util.less
+++ b/assets/css/util.less
@@ -1,45 +1,96 @@
 /* ========================================
  ========= start pads and margins  ========
 ========================================= */
-.x-removeM {
+.x-noM {
     margin: 0px !important;
 }
 
-.x-removeMT {
+.x-noMT {
     margin-top: 0px !important;
 }
 
-.x-removeMB {
+.x-noMB {
     margin-bottom: 0px !important;
 }
 
-.x-removeML {
+.x-noML {
     margin-left: 0px !important;
 }
 
-.x-removeMR {
+.x-noMR {
     margin-right: 0px !important;
 }
 
-.x-removeP {
+.x-noP {
     padding: 0px !important;
 }
 
-.x-removePT {
+.x-noPT {
     padding-top: 0px !important;
 }
 
-.x-removePB {
+.x-noPB {
     padding-bottom: 0px !important;
 }
 
-.x-removePL {
+.x-noPL {
     padding-left: 0px !important;
 }
 
-.x-removePR {
+.x-noPR {
     padding-right: 0px !important;
 }
+
+@media only screen and (max-width : 480px) {
+    .x-noP-xs {
+        padding: 0px !important;
+    }
+    .x-noPL-xs {
+        padding-left: 0px !important;
+    }
+    .x-noPR-xs {
+        padding-right: 0px !important;
+    }
+
+}
+
+@media only screen and (max-width : 768px) {
+    .x-noP-sm {
+        padding: 0px !important;
+    }
+    .x-noPL-sm {
+        padding-left: 0px !important;
+    }
+    .x-noPR-sm {
+        padding-right: 0px !important;
+    }
+}
+
+@media only screen and (max-width : 992px) {
+    .x-noP-md {
+        padding: 0px !important;
+    }
+    .x-noPL-md {
+        padding-left: 0px !important;
+    }
+    .x-noPR-md {
+        padding-right: 0px !important;
+    }
+}
+
+
+@media only screen and (max-width : 4200px) {
+    .x-noP-lg {
+        padding: 0px !important;
+    }
+    .x-noPL-lg {
+        padding-left: 0px !important;
+    }
+    .x-noPR-lg {
+        padding-right: 0px !important;
+    }
+}
+/* ================ end pads and margins ===================== */
 
 .x-inlineblock {
     display: inline-block;
@@ -48,10 +99,6 @@
 .x-block {
     display: block;
 }
-
-/* ================ end pads and margins ===================== */
-
-
 
 /* ========== typography ================== */
 
