--- a/assets/css/global.less
+++ b/assets/css/global.less
@@ -14,3 +14,32 @@ a {
     color: @jfBlue;
 }
 
+
+.form-control {
+  border-radius: 5px;
+}
+
+
+
+
+
+
+.btn {
+    border-radius: 5px;
+}
+
+.btn-primary {
+  color: #fff;
+  background-color: #36567d;
+  border-color: #DDD;
+}
+
+.btn-primary:hover, .btn-primary:focus {
+  color: #fff;
+  background-color: @jfBlue;
+  border-color: #FFF;
+}
+
+.x-search-btn {
+    min-width: 100px;
+}
