--- a/assets/css/app.less
+++ b/assets/css/app.less
@@ -12,7 +12,7 @@
 @import "header.less";
 //@import "searchbar.less";
 @import "comp-buttons.less";
-@import "comp-searchbar-jobs"
+//@import "comp-searchbar-jobs.less"
 @import "comp-homehero.less";
 @import "comp-browsehome.less";
 @import "comp-alert-subscribe.less";
