--- a/assets/css/jobwell.less
+++ b/assets/css/jobwell.less
@@ -1,4 +1,4 @@
-#job-well {
+.x-job-well {
     padding-top: 15px;
 
     .x-well {
@@ -11,14 +11,12 @@
             line-height: 18px;
         }
 
-        .x-serptitle a {
+        .x-serptitle  {
             //font-family: 'Montserrat', 'Lato';
             font-size: @font-md;
+            font-weight:bold;
             color: @jfBlue;
         }
         
-    }
-    .x-well-even {
-        background: #FFF;
     }
 }
