--- a/assets/css/app.less
+++ b/assets/css/app.less
@@ -10,12 +10,13 @@
 @import "global.less";
 @import "home.less";
 @import "header.less";
-//@import "searchbar.less";
+@import "searchbar.less";
 @import "comp-buttons.less";
 //@import "comp-searchbar-jobs.less"
 @import "comp-homehero.less";
 @import "comp-browsehome.less";
 @import "comp-alert-subscribe.less";
+@import "comp-alert-subscribe-jobs.less";
 @import "comp-werehiring.less";
 @import "jobs.less";
 @import "jobwell.less";
