--- a/assets/css/colors.less
+++ b/assets/css/colors.less
@@ -1,11 +1,15 @@
 /* ========================================
  ========= start color variables ========
 ========================================= */
-@headerBackground: #000;
-@headerColor: #fff;
+@jfBlue: #36567D;
+//@jfRed: #C12028;
+@jfRed: #E74C3C;
 
-@searchbarBackground: #F1F1F1;
-@searchbarBorder: #F0F0F0 ;
+@headerBackground: #000;
+@headerColor: #ddd;
+
+@searchbarBackground-color: #F1F1F1;
+@searchbarBorder: #CCC;
 
 @footer-bgcolor: #252525;
 @footer-color: #333;
@@ -13,8 +17,6 @@
 @footer-border: @searchbarBorder;
 
 
-@jfBlue: #36567D;
-//@jfRed: #C12028;
-@jfRed: #E74C3C;
+
 
 /*============== end colors ===============*/
