--- a/assets/css/jobs.less
+++ b/assets/css/jobs.less
@@ -71,7 +71,7 @@ h1.x-jobtitle {
     .x-reducepad-5  {
         margin-bottom: 5px;
     }
-    
+     
    /* .x-logo
     {
         text-align: center;
@@ -112,9 +112,9 @@ h1.x-jobtitle {
 }
 
 
-/*@media (min-width: 1360px){
-    .container {
-        width: 1340px;
-    }
-}*/
-
+@media screen and (max-width: 767px) {
+        .row-offcanvas-right .sidebar-offcanvas {
+            right: -50%;
+            margin-right: 15px;
+        }
+}
