--- a/assets/css/app.less
+++ b/assets/css/app.less
@@ -20,4 +20,5 @@
 @import "comp-werehiring.less";
 @import "jobs.less";
 @import "jobwell.less";
+@import "salaries.less";
 @import "comp-footer.less";
