--- a/assets/css/util.less
+++ b/assets/css/util.less
@@ -41,6 +41,71 @@
     padding-right: 0px !important;
 }
 
+.x-PT5 {
+    padding-top: 5px !important;
+}
+
+.x-PB5 {
+    padding-bottom: 5px !important;
+}
+
+.x-PL5 {
+    padding-left: 5px !important;
+}
+
+.x-PR5 {
+    padding-right: 5px !important;
+}
+
+.x-PT10 {
+    padding-top: 10px !important;
+}
+
+.x-PB10 {
+    padding-bottom: 10px !important;
+}
+
+.x-PL10 {
+    padding-left: 10px !important;
+}
+
+.x-PR10 {
+    padding-right: 10px !important;
+}
+
+
+.x-PT15 {
+    padding-top: 15px !important;
+}
+
+.x-PB15 {
+    padding-bottom: 15px !important;
+}
+
+.x-PL15 {
+    padding-left: 15px !important;
+}
+
+.x-PR15 {
+    padding-right: 15px !important;
+}
+
+.x-PT20 {
+    padding-top: 20px !important;
+}
+
+.x-PB20 {
+    padding-bottom: 20px !important;
+}
+
+.x-PL20 {
+    padding-left: 20px !important;
+}
+
+.x-PR20 {
+    padding-right: 20px !important;
+}
+
 @media only screen and (max-width : 480px) {
     .x-noP-xs {
         padding: 0px !important;
